--- a/ros2_ws_udemy/src/my_cpp_pkg/package.xml
+++ b/ros2_ws_udemy/src/my_cpp_pkg/package.xml
@@ -4,7 +4,7 @@
   <name>my_cpp_pkg</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="xzhongs1127@gmail.com">simzx</maintainer>
+  <maintainer email="ed@todo.todo">ed</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
