--- a/ros2_ws_udemy/src/my_cpp_pkg/CMakeLists.txt
+++ b/ros2_ws_udemy/src/my_cpp_pkg/CMakeLists.txt
@@ -8,21 +8,41 @@ endif()
 # find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
-find_package(example_interfaces REQUIRED) # Added dependency
+find_package(example_interfaces REQUIRED)
 
 add_executable(cpp_node src/my_first_node.cpp)
 ament_target_dependencies(cpp_node rclcpp)
 
-add_executable(robot_news_station src/robot_news_station.cpp) # New executable
-ament_target_dependencies(robot_news_station rclcpp example_interfaces) # Added dependency
+add_executable(robot_news_station src/robot_news_station.cpp)
+ament_target_dependencies(robot_news_station rclcpp example_interfaces)
 
-add_executable(smartphone src/smartphone.cpp) # New executable
-ament_target_dependencies(smartphone rclcpp example_interfaces) # Added dependency
+add_executable(smartphone src/smartphone.cpp)
+ament_target_dependencies(smartphone rclcpp example_interfaces)
+
+add_executable(number_publisher src/number_publisher.cpp)
+ament_target_dependencies(number_publisher rclcpp example_interfaces)
+
+add_executable(number_counter src/number_counter.cpp)
+ament_target_dependencies(number_counter rclcpp example_interfaces)
+
+add_executable(add_two_ints_server src/add_two_ints_server.cpp)
+ament_target_dependencies(add_two_ints_server rclcpp example_interfaces)
+
+add_executable(add_two_ints_client_no_oop src/add_two_ints_client_no_oop.cpp)
+ament_target_dependencies(add_two_ints_client_no_oop rclcpp example_interfaces)
+
+add_executable(add_two_ints_client src/add_two_ints_client.cpp)
+ament_target_dependencies(add_two_ints_client rclcpp example_interfaces)
 
 install(TARGETS
   cpp_node
-  robot_news_station # New executable
-  smartphone # New executable
+  robot_news_station
+  smartphone
+  number_publisher
+  number_counter
+  add_two_ints_server
+  add_two_ints_client_no_oop
+  add_two_ints_client
   DESTINATION lib/${PROJECT_NAME}
 )
 
